fix:bcd ~ address a couple of regressions since readability update
Address a couple of bugs with the BCD table since the readability update.

--- a/client/src/document/ingredients/browser-compatibility-table/index.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/index.scss
@@ -39,10 +39,12 @@
     tr {
       height: 3rem;
 
-      &:last-child {
-        th,
-        td {
-          border-bottom-width: 0;
+      @media screen and (min-width: $screen-md) {
+        &:last-child {
+          th,
+          td {
+            border-bottom-width: 0;
+          }
         }
       }
 
@@ -228,8 +230,6 @@
 
   .bc-version-label {
     display: inline;
-    font-weight: 650;
-    line-height: 1rem;
   }
 
   abbr {
@@ -336,13 +336,11 @@ dl.bc-notes-list {
 
 .bcd-cell-text-wrapper {
   display: flex;
-  flex-direction: row-reverse;
   gap: 0.5rem;
 
   @media screen and (min-width: $screen-md) {
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
   }
 }
 
@@ -382,7 +380,6 @@ dl.bc-notes-list {
 .bc-notes-wrapper {
   .bcd-cell-text-wrapper {
     flex-direction: row;
-    justify-content: initial;
   }
 }
 
